force-app/main/default/objects/Store__c/fields/Current_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Current_Traffic__c</fullName>
    <label>Current Traffic</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>