force-app/main/default/objects/Store__c/fields/Entrances__c.field-meta.xml
<CustomField>
    <fullName>Entrances__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Monitored Store Entrances</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>