force-app/main/default/objects/Store__c/fields/Maximum_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Traffic__c</fullName>
    <label>Maximum Traffic</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>