force-app/main/default/objects/Store__c/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stores</relationshipLabel>
    <relationshipName>Stores</relationshipName>
    <type>Lookup</type>
</CustomField>