force-app/main/default/objects/Store__c/fields/Total_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Total_Traffic__c</fullName>
    <label>Total Traffic</label>
    <summarizedField>Store_Date__c.Total_Traffic__c</summarizedField>
    <summaryForeignKey>Store_Date__c.Store__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>